transition to a state associating with a tab when it is selected

--- a/partials/testbuttonfragment.html
+++ b/partials/testbuttonfragment.html
@@ -4,11 +4,14 @@
 <p>Test Button Fragment?</p>
 
 <!-- load unused UITabController here causes performance issue (js not response) -->
-<!-- <div id="tab" ng-controller="UITabController"> -->
+<!-- <div id="tab" ng-controller="UITabController"> 
+	<tab ng-repeat="tab in ui.fragments" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled" select="fragmentTransition(tab.fragmentState)">
+-->
 <div id="tab">
 	<tabset>
 	<tab ng-repeat="tab in ui.fragments" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled" select="fragmentTransition(tab.fragmentState)">
 
+		<br>
 		{{tab}}
 		<br>
 		<a ui-sref={{tab.fragmentState}}>Load fragment to the ui-view below:</a>
